<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramusthastudio.myintentapp.MainActivity">

  <Button
      android:text="@string/changeActivity"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/changeActivity" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="8dp" app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"/>
  <Button
      android:text="@string/changeActivityWithData"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/changeActivityWithData" android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/changeActivity"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
  <Button
      android:text="@string/changeActivityWithObject"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/changeActivityWithObject" android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/changeActivityWithData"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
  <Button
      android:text="@string/dialNumber"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/dialNumber" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="8dp" android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/changeActivityWithObject"/>
  <Button
      android:text="@string/changeActivityWithResult"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/changeActivityWithResult" android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/dialNumber"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
  <TextView
      android:text="@string/activityResult"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/activityResult"
      android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/changeActivityWithResult"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
      android:textStyle="bold" android:textSize="18sp"/>
</android.support.constraint.ConstraintLayout>
