<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ramusthastudio.myintentapp.MoveActivity">

  <TextView
      android:text="@string/chooseNumber"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/chooseNumber"
      app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="8dp" app:layout_constraintTop_toTopOf="parent"
      android:layout_marginTop="8dp"
      android:textSize="14sp" android:textStyle="bold"
  />
  <RadioGroup
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="8dp"
      android:id="@+id/numberGroup" android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/chooseNumber">
    <RadioButton
        android:text="50"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/rb50"
        android:layout_weight="1"/>
    <RadioButton
        android:text="100"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/rb100"
        android:layout_weight="1"/>
    <RadioButton
        android:text="150"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/rb150"
        android:layout_weight="1"/>
    <RadioButton
        android:text="200"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:id="@+id/rb200"
        android:layout_weight="1"/>
  </RadioGroup>
  <Button
      android:text="@string/choose"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:id="@+id/chooseBtn" android:layout_marginTop="8dp"
      app:layout_constraintTop_toBottomOf="@+id/numberGroup"
      app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
      app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"/>
  <TextView
      android:text="@string/extras"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/extras" android:textStyle="bold"
      android:textSize="18sp" app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
      android:layout_marginStart="8dp"
      app:layout_constraintBottom_toBottomOf="parent"
      android:layout_marginBottom="8dp"/>
</android.support.constraint.ConstraintLayout>
